test/modules/standard/FileSystem/lydia/mkdir/makeAlreadyPresent.good
makeAlreadyPresent.chpl:5: error: uncaught error - File exists in mkdir with path "already_present"
